--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -28,11 +28,11 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="#EC0000"
-                    app:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:id="@+id/ma_img0"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="#FFFFFF"
+                    android:src="@drawable/liverpool" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -98,11 +98,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="#EC0000"
-                    app:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:id="@+id/ma_img1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:adjustViewBounds="true"
+                    android:background="#FFFFFF"
+                    android:scaleType="centerInside"
+
+                    app:srcCompat="@drawable/arsenal" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -167,10 +170,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -236,10 +239,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -303,10 +306,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img4"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -371,10 +374,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img5"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -439,10 +442,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img6"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -507,10 +510,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/ma_img7"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
