--- a/app/src/main/res/layout/activity_my_assets.xml
+++ b/app/src/main/res/layout/activity_my_assets.xml
@@ -27,10 +27,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_Liverpool"
+                    android:id="@+id/img0"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -111,10 +111,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_manchesterCity"
+                    android:id="@+id/img1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -195,10 +195,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_LeicesterCity"
+                    android:id="@+id/img2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -279,10 +279,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_Chelsea"
+                    android:id="@+id/img3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -363,10 +363,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_ManchesterUnited"
+                    android:id="@+id/img4"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -447,10 +447,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_Tottenham"
+                    android:id="@+id/img5"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -530,10 +530,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_Arsenal"
+                    android:id="@+id/img6"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
@@ -613,10 +613,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_NewcastleUnited"
+                    android:id="@+id/img7"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="#EC0000"
+                    android:background="#FFFFFF"
                     app:srcCompat="@drawable/ic_launcher_foreground" />
 
                 <LinearLayout
